# xllm-demo

./: Makefile  README.md  pyproject.toml
demo_xllm/cli/: download.py  fuse.py  gptq_quantize.py  train.py
demo_xllm/core/: config.py  dataset.py
scripts/: download.sh  fuse.sh  gptq-quantize.sh  train-deepspeed.sh  train.sh
xllm_demo/cli/: download.py  fuse.py  gptq_quantize.py  train.py
xllm_demo/core/: config.py  constants.py  dataset.py
